Cleanup cpp files: remove unused CPP code

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -224,7 +224,7 @@ message(STATUS "========================================================")
 # library compilation  #
 # #######################################
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/libCacheSim/include)
-set(ALL_MODULES cachelib admission prefetch evictionC evictionCPP traceReader profiler dataStructure ds_hash utils)
+set(ALL_MODULES cachelib admission prefetch evictionC traceReader profiler dataStructure ds_hash utils)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libCacheSim/cache)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/libCacheSim/dataStructure)
@@ -247,7 +247,7 @@ file(GLOB cache_source
     ${PROJECT_SOURCE_DIR}/libCacheSim/cache/admission/*.c
     ${PROJECT_SOURCE_DIR}/libCacheSim/cache/prefetch/*.c
 
-    ${PROJECT_SOURCE_DIR}/libCacheSim/cache/eviction/cpp/*
+    # ${PROJECT_SOURCE_DIR}/libCacheSim/cache/eviction/cpp/*
 )
 
 if(EXISTS ${PROJECT_SOURCE_DIR}/libCacheSim/cache/eviction/fifo)
